# wordle_analysis

./: .gitignore  README.md  main.py  pyproject.toml  testing_solvers.ipynb  wordle_game.py  wordle_game_tests.py  words_list_analysis.ipynb
analysis/: filter_solver_analysis.ipynb  genetic_algorithm.ipynb  words_list_analysis.ipynb
module/: setup.py
module/wordleanalysis/: wordle_game.py
module/wordleanalysis/solvers/: FilterSolver.py  GameDetails.py  WordleSolver.py
solvers/: FilterSolver.py  GameDetails.py  WordleSolver.py
spelling_bee/: spelling_bee.py
src/games/spelling_bee/: spelling_bee_hints.py
src/nyt_games/games/spelling_bee/: spelling_bee.py  spelling_bee_hints.py
src/nyt_games/games/wordle/: wordle_game.py
src/nyt_games/solvers/wordle/: FilterSolver.py  GameDetails.py  WordleSolver.py
src/nyt_games/web_app/: app_main.py  plotly_dash_ui.py
src/solvers/wordle/: FilterSolver.py  WordleSolver.py
test/: wordle_game_tests.py
tests/: test_wordle_game.py
webapp/: app_main.py  basic_ui.html
