[project]
name = "nyt_games"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "pandas",
    "numpy",
    "matplotlib",
    "plotly",
    "jupyter",
    "plotly",
    "dash",
    "dash_ag_grid",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest"
]